# anlagenbuch

./: .gitattributes  .gitignore  Makefile  README.md
apps/ui-admin/: index.html  package-lock.json  package.json  vite.config.ts
apps/ui-schichtbuch/: index.html  package-lock.json  package.json  vite.config.ts
apps/ui-tickets/: index.html  package-lock.json  package.json  vite.config.ts
docs/: Anlagenbuch_Modul_AutoTests_CodexCLI_v0_1.md  Anlagenbuch_Modul_Technikkonzept_v0_1.md  Anlagenbuch_Server_CodexCLI_BuildCheckliste_v0_3.md  Anlagenbuch_Server_CodexCLI_Runbook_v0_3.md  Debian_Native_Runbook.md  REST_API_Dokumentation.md  db_schema.sql  schichtbuch_ticket_reporting_test_instructions.md  schichtbuch_ticket_workflow_addendum_noreroute.md
ops/caddy/: Caddyfile
ops/debian/: README.md
services/api/: Dockerfile  pyproject.toml  requirements.txt
services/api/app/: deps.py  main.py  seed_data.py  settings.py
services/api/app/db/: models.py  session.py
services/api/app/db/migrations/: env.py
services/api/app/db/migrations/versions/: 0001_initial.py
services/api/app/domain/: audit_hashchain.py  email_service.py  files.py  outbox.py  reporting_engine.py  request_meter.py  shift.py  sla.py
services/api/app/logging/: logging_config.py
services/api/app/routers/: admin.py  auth.py  ops.py  plants.py  reporting.py  schichtbuch.py  tickets_internal.py  tickets_public.py
services/api/app/workers/: health_watchdog.py  outbox_publisher.py  reporting_scheduler.py
services/api/tests_smoke/: smoke_http.py
tools/: sb_agent.py  seed.py  webhook_stub.py
(+45 files in other folders)
